# directorio_aprendices_csv

./: .gitignore  directorio_aprendices_csv.py  main.py  pyproject.toml
test/: test_directorio_aprendices_csv.py
