[project]
name = "directorio-aprendices-csv"
version = "0.1.0"
description = "Proyecto de Directorio de aprendices en formato CSV"
authors = [
    { name = "Alejandro Zapata", email = "ftwgames884@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pytest>=8.4.2",
]
